# orthanc-dicomweb

./: .hgignore  AUTHORS  CITATION.cff  CMakeLists.txt  NEWS  README  Status.txt  TODO
Plugin/: Configuration.cpp  Configuration.h  Dicom.cpp  Dicom.h  DicomResults.cpp  DicomResults.h  DicomWebClient.cpp  DicomWebClient.h  DicomWebFormatter.cpp  DicomWebFormatter.h  DicomWebServers.cpp  DicomWebServers.h  GdcmParsedDicomFile.cpp  GdcmParsedDicomFile.h  GdcmParsedDicomFile_TransferSyntaxes.impl.h  OrthancExplorer.js  Plugin.cpp  Plugin.h  QidoRs.cpp  QidoRs.h  StowRs.cpp  StowRs.h  WadoRs.cpp  WadoRs.h  WadoRsRetrieveFrames.cpp  WadoRsRetrieveRendered.cpp  WadoUri.cpp  WadoUri.h  WeightedAverageMetrics.h
Resources/: GenerateTransferSyntaxes.mustache  GenerateTransferSyntaxes.py  RunCppCheck.sh  SyncOrthancFolder.py  holy-build-box-compile.sh  holy-build-box-internal.sh
Resources/CMake/: GdcmConfiguration.cmake  JavaScriptLibraries.cmake
Resources/Orthanc/: DownloadOrthancFramework.cmake
Resources/Orthanc/CMake/: DownloadOrthancFramework.cmake
Resources/Orthanc/Plugins/: OrthancPluginCppWrapper.cpp
Resources/Orthanc/Sdk-1.5.4/orthanc/: OrthancCPlugin.h
Resources/Orthanc/Sdk-1.5.7/orthanc/: OrthancCPlugin.h
Resources/Samples/JavaScript/: qido-rs.js  stow-rs.js
Resources/Samples/Python/: SendStow.py  WadoRetrieveStudy.py
UnitTestsSources/: UnitTestsMain.cpp
WebApplication/: app.js  index.html
